# revolut

./: .gitignore  Cargo.toml  README.md  deny.toml  devenv.nix  justfile
.github/workflows/: audit.yaml  ci.yaml
examples/: bank_details.rs  cancel_order.rs  capture_order.rs  create_order.rs  list_accounts.rs  list_orders.rs  refresh_access_token.rs  retrieve_access_token.rs  update_order.rs
src/: client.rs  errors.rs  lib.rs
src/business/: accounts.rs  cards.rs  client.rs  counterparties.rs  expenses.rs  foreign_exchange.rs  mod.rs  payment_drafts.rs  payout_links.rs  simulations.rs  team_members.rs  transactions.rs  transfers.rs
src/business/accounts/: mod.rs
src/business/cards/: mod.rs
src/business/counterparties/: mod.rs
src/business/expenses/: mod.rs
src/business/team_members/: mod.rs
src/business/transfers/: mod.rs
src/business/webhooks/: mod.rs  v1.rs  v2.rs
src/merchant/: apple_pay.rs  client.rs  customers.rs  disputes.rs  locations.rs  mod.rs  orders.rs  other.rs  payments.rs  payouts.rs  report_runs.rs  v2024_09_01.rs  webhooks.rs
src/merchant/customers/: mod.rs
src/merchant/deprecated/: mod.rs
src/merchant/disputes/: mod.rs
src/merchant/orders/: mod.rs
src/merchant/payments/: mod.rs
src/merchant/payouts/: mod.rs
src/merchant/report_runs/: mod.rs
src/merchant/webhooks/: mod.rs
src/open_banking/: client.rs  mod.rs
